Tehty viikko2 t4asti

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -17,3 +17,9 @@
 
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
 <%= link_to 'Back', beers_path %>
+
+<% if @beer.ratings.empty? %>
+    beer has not yet been rated!
+<% else %>
+    Has <%= @beer.ratings.size %>  ratings, average <%=@beer.average_rating%>
+<% end %>
