--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -4,10 +4,10 @@
 
 <ul>
   <% @ratings.each do |rating| %>
-      <li> <%= rating %> </li>
+      <li> <%= rating %> <%= link_to 'delete', rating_path(rating.id), method: :delete %> </li>
   <% end %>
 </ul>
 
 <rb>
-<%= link_to 'New rating',ratings_new_path%>
+<%= link_to 'New rating',new_rating_path%>
 </rb>
