--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -21,5 +21,5 @@
 <% if @beer.ratings.empty? %>
     beer has not yet been rated!
 <% else %>
-    Has <%=pluralize(@beer.ratings.size,'rating') %>, average <%=@beer.average_rating%>
+    Has <%=pluralize(@beer.ratings.size,'rating') %>, average <%=@beer.average_rating.round(2)%>
 <% end %>
