--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,34 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<% if session[:last_rating].nil? %>
+    <p>no ratings given</p>
+<% else %>
+    <p>previous rating: <%= session[:last_rating] %></p>
+<% end %>
+
+<% if  current_user %>
+    <p><%= current_user.username %> signed in</p>
+<% end %>
+
 <body>
 
 <div class="navibar">
   <%= link_to 'breweries', breweries_path %>
   <%= link_to 'beers', beers_path %>
   <%= link_to 'ratings',ratings_path %>
+  <%= link_to 'users',users_path %>
+  <p> | </p>
+  <% if current_user %>
+      <%= link_to current_user.username, current_user %>
+      <%= link_to 'rate a beer', new_rating_path %>
+      <%= link_to 'signout',signout_path,method: :delete %>
+    <% else %>
+      <%= link_to 'sign in', signin_path %>
+      <%= link_to 'sign up', signup_path %>
+    <% end %>
+
 </div>
 <%= yield %>
 
