--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<% if session[:last_rating].nil? %>
-    <p>no ratings given</p>
-<% else %>
-    <p>previous rating: <%= session[:last_rating] %></p>
-<% end %>
 
-<% if  current_user %>
-    <p><%= current_user.username %> signed in</p>
-<% end %>
 
 <body>
 
@@ -24,10 +16,12 @@
   <%= link_to 'beers', beers_path %>
   <%= link_to 'ratings',ratings_path %>
   <%= link_to 'users',users_path %>
+  <%= link_to 'beer clubs',beer_clubs_path %>
   |
   <% if current_user %>
       <%= link_to current_user.username, current_user %>
       <%= link_to 'rate a beer', new_rating_path %>
+      <%= link_to 'join a club', memberships_new_path %>
       <%= link_to 'signout',signout_path,method: :delete %>
     <% else %>
       <%= link_to 'sign in', signin_path %>
