--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -15,10 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :style %><br>
-    <%= f.text_field :style %>
-  </div>
+    <div class="field">
+      <%= f.label :style %><br>
+      <%= f.select :style, options_for_select(@styles) %>
+    </div>
   <div class="field">
     <%= f.label :brewery_id %><br>
     <%= f.select :brewery_id, options_from_collection_for_select(@breweries,:id,:name) %>
