--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -15,11 +15,22 @@
   <%= @beer.brewery_id %>
 </p>
 
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Back', beers_path %>
 
 <% if @beer.ratings.empty? %>
     beer has not yet been rated!
 <% else %>
     Has <%=pluralize(@beer.ratings.size,'rating') %>, average <%=@beer.average_rating.round(2)%>
+<% end %>
+
+<% if current_user %>
+    <h4>give a rating:</h4>
+
+    <%= form_for(@rating) do |f| %>
+        <%= f.hidden_field :beer_id %>
+        score: <%= f.number_field :score %>
+        <%= f.submit %>
+    <% end %>
+
+    <%= link_to 'Edit', edit_beer_path(@beer) %> |
+    <%= link_to 'Back', beers_path %>
 <% end %>
