T9 takana, on tämä työmaa.

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,8 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <strong>
-  Lol! <%= Rails.cache.read session[]%>
+  <%= @place.name %>
 </strong>
+<br>
+
+<br>
+<%= @place.adress %>
+<br>
+ <%=@place.zip %> <%=@place.city %>
+</br>
+
+
 
 
 
