--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -25,19 +25,19 @@
 
     <% end %>
 
- <% if current_user %>
-     <% if @beer_club.users.exclude?(current_user)%>
 
-    <%= form_for(@membership) do |f| %>
+ <% if current_user %>
+     <% if not @beer_club.users.include?(current_user) %>
+
+      <%= form_for(@membership) do |f| %>
         <%= f.hidden_field :beer_club_id %>
         <%= f.submit value:"join the club"%>
-    <% end %>
+      <% end %>
     <% end %>
     <% if @beer_club.users.include?(current_user) %>
-     <%= form_for(@membership) do |f| %>
+      <%= form_for(@membership, :method => :delete) do |f| %>
             <%= f.submit value: "end the membership" %>
-            <% @membership.destroy %>
-    <% end %>
+      <% end %>
     <% end %>
     <% end %>
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
