--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <% if current_user %>
       <%= link_to current_user.username, current_user %>
       <%= link_to 'rate a beer', new_rating_path %>
-      <%= link_to 'join a club', memberships_new_path %>
+      <%= link_to 'join a club', new_membership_path %>
       <%= link_to 'signout',signout_path,method: :delete %>
     <% else %>
       <%= link_to 'sign in', signin_path %>
