--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -14,7 +14,7 @@
   <tbody>
     <% @styles.each do |style| %>
       <tr>
-        <td><%= style.name %></td>
+        <td><%= link_to style.name, style %></td>
         <td><%= style.description %></td>
         <td><%= link_to 'Show', style %></td>
         <td><%= link_to 'Edit', edit_style_path(style) %></td>
