--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Breweries</h1>
 <p> Number of breweries: <%= @breweries.count %> </p>
-<table>
+<table class = "table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -17,7 +17,7 @@
         <td><%= link_to brewery.name , brewery %></td>
         <td><%= brewery.year %></td>
         <td><%= link_to 'Edit', edit_brewery_path(brewery) if current_user%></td>
-        <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } if current_user%></td>
+        <td><%= link_to 'Destroy', brewery,class: "btn btn-danger" , method: :delete, data: { confirm: 'Are you sure?' } if current_user%></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,7 +25,7 @@
 
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path %>
+<%= link_to 'New Brewery', new_brewery_path, class:'btn btn-primary' %>
 <br>
   <%= link_to 'List of beers', beers_path %>
 
