--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,16 +1,26 @@
+
+
 <h2>List of ratings</h2>
 
 <td>Number of ratings <%=@ratings.size%></td>
-
-<ul>
+<table class = "table table-hover" >
+  <thead>
+   <tr>
+     <th> Beer</th>
+     <th> Score</th>
+     <th> User</th>
+   </tr>
+  </thead>
+<tbody>
   <% @ratings.each do |rating| %>
-
-         <li><%= rating %> <%= link_to rating.user.username,rating.user %> </li>
-
-
+       <tr>
+         <td> <%=link_to rating.beer, rating.beer%></td>
+         <td>  <%=rating.score %></td>
+         <td>  <%= link_to rating.user,rating.user %></td>
+       </tr>
   <% end %>
-</ul>
-
+</tbody>
+</table>
 <rb>
-<%= link_to 'New rating',new_rating_path%>
+<%= link_to 'New rating',new_rating_path, class:'btn btn-primary'%>
 </rb>
