--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,8 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <h2> <%= @brewery.name%></h2>
-</p>
+
+  <h2> <%= @brewery.name%>
+   <% if not @brewery.active %>
+    <span class="label label-info">retired</span>
+    <% end %>
+</h2>
 
 <p>
   <i>Established at <%= @brewery.year %></i>
