--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -30,6 +30,9 @@
       <%= link_to beer.name , beer%>
   <% end %>
 </p>
-
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
+<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
+<%= link_to "Delete", @brewery,method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' } if current_user.admin%>
+<br>
+<br>
+<%= link_to 'Edit', edit_brewery_path(@brewery), class: "btn btn-primary" %>
+<%= link_to 'Back', breweries_path, class: "btn btn-primary" %>
