--- a/app/views/ratings/_list.html.erb
+++ b/app/views/ratings/_list.html.erb
@@ -10,7 +10,7 @@
   <% objects.each do |object| %>
       <tr>
         <td><%= link_to object.name, object %></td>
-        <td><%= object.average_rating %></td>
+        <td><%= round(object.average_rating) %></td>
         <td></td>
       </tr>
   <% end %>
