--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= link_to style.name, style %></td>
         <td><%= style.description %></td>
-        <td><%= link_to 'Show', style %></td>
-        <td><%= link_to 'Edit', edit_style_path(style) %></td>
-        <td><%= link_to 'Destroy', style,class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', style, class: "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_style_path(style), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Destroy', style,class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } if current_user and current_user.admin %></td>
       </tr>
     <% end %>
   </tbody>
