--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Username</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,10 @@
     <% @users.each do |user| %>
       <tr>
         <td><%=link_to user.username,user %></td>
+        <% if user.blocked %>
+        <td><span class="label label-success"> <%="Frozen"%></span></td>
+            <% end %>
+        <td></td>
       </tr>
     <% end %>
   </tbody>
