--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,10 @@
   <%= @user.username %>
 </p>
 
+<% if @user.blocked%>
+    <td><span class="label label-success"> <%="Frozen"%></span></td>
+    <% end %>
+
 <p> Has made <%= @user.ratings.count %> ratings,average <%= @user.average_rating %></p>
 
 <p>
@@ -50,6 +54,7 @@
     <th>Name</th>
     <th>City</th>
     <th>Founded at</th>
+
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -59,6 +64,7 @@
         <td><%= link_to beerclub.name,beerclub %></td>
         <td><%=beerclub.city%></td>
         <td><%=beerclub.founded%></td>
+
     </tr>
     <% end %>
   </tbody>
@@ -66,9 +72,19 @@
 
 
 
+
+
 <% if current_user == @user %>
     <%= link_to 'Change Password', edit_user_path(@user),class: "btn btn-primary" %>
     <td><%= link_to 'Destroy user', @user, class: "btn btn-danger",method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
+
+<% if  current_user and current_user.admin %>
+   <% if @user.blocked %>
+        <%= link_to 'reactivate account', toggle_blocked_user_path(@user.id), method: :post, class: "btn btn-danger" %>
+    <% else %>
+        <%= link_to 'Froze account', toggle_blocked_user_path(@user.id), method: :post, class: "btn btn-primary" %>
+    <% end %>
     <% end %>
 <table></table>
 <%= link_to 'Back', users_path,class: "btn btn-primary" %>
