--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Beers</h1>
+<% cache 'beerlist', skip_digest: true do %>
 
 <table class="table table-hover">
   <thead>
@@ -23,6 +24,8 @@
   <% end %>
   </tbody>
 </table>
+
+    <% end %>
 
 
 
